--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			
 		<h1>Daily MoMs Tracker</h1>
 		<h2 id="count">loading...</h2>
-		<button onclick="plusOne()">Your call to action goes here</button>
+		<button onclick="plusOne()">I meditated for 5 minutes!</button>
 		<button onclick="reset()">reset</button>
 	      
 		<script type="text/javascript" src="my-scripts.js"></script>
